# setri

./: .gitignore  AGEND.md  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  setri.sh  tree_arch.txt
.claude/skills/co-reviewer/: SKILL.md
.claude/skills/file-reorganizer/: SKILL.md  skill.md.backup
.claude/skills/reg-extractor/: README.md  SKILL.md
.claude/skills/spec-reality-audit/: SKILL.md
data/knowledge/规则库/: README.md
docs/: P1-P2需求细化.md  P1-P3核心资产实施计划.md  file_checklist.md  path-mapping-implementation-summary.md  prd.md  verification-implementation-complete.md  verification-summary.md  合同承接矩阵.md  统一交付演示系统-Milestone计划.md  统一交付演示系统开发计划.md  统一交付演示系统重构计划.md  统一交付演示系统需求文档.md
docs/architecture/: directory-structure.md  三元关联可视化设计.md  专家知识库与规则演化设计.md  多模态审核技术路线说明.md  评测与执行底座工程设计.md
docs/archive/: P1-P3核心资产实施计划-v0.1-20260411.md  directory-structure-analysis-20260228.md  prd-source-v2.0-20260212.md  prd-v0.6-20260322.md  prd-v0.8-20260410-pre-rewrite.md  test-data-diff-analysis-20260227.json  verification-implementation-complete-20260316.md  verification-summary-20260316.md  统一交付演示系统开发计划-v1.0.1-20260410.md
docs/plans/: 2026-02-28-file-taxonomy-design.md
scripts/: cleanup_duplicates.py  fix_file_reorganization.py  generate_milestone_docx.py  reorganize_files.py  verify_reorganization.py
src/setri/: __init__.py  cli.py  config.py
src/setri/common/: pdf.py  schemas.py  synonyms.py
src/setri/p1_regulations/: assemble.py  (+5 more)
合同/: 2026基于“智能体协同”的配电网业扩项目智能评审关键技术研究与应用_执行中.doc  2026基于全流程过程数据的配电网工程智慧进度管控方法与验证_招标中.doc  2026配电网工程竣工资料多模态理解与知识图谱驱动的智能核查方法研究_招标中.doc
(+19 files in other folders)
