[project]
name = "setri"
version = "0.1.0"
description = "配电网业扩智能评审副驾驶 — Python 管道模块"
requires-python = ">=3.10"
dependencies = [
    "pdfplumber>=0.11",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
]
ui = [
    "streamlit>=1.30",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
setri = "setri.cli:app"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/setri"]
